# wheatley

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: wheatly.example.json  wheatly.ollama-qwen35-4b.example.json  wheatly.voice-stack.example.json
docs/: architecture.md  decisions.md  hardware-and-models.md  local-english-startup.md  runbook.md  runtime-options.md  stt-benchmark-results.md  stt-benchmark.md  stt-two-phase-benchmark-results.md
examples/profiles/minimal/: config.jsonc  memory.md  system.md  (+2 more)
profiles/test/: config.jsonc  python_preamble.py  system.md  user.md
profiles/wheatley/: config.jsonc  memory.md  memory_consolidate.md  memory_update.md
profiles/wheatly/: config.jsonc  memory.md  memory_consolidate.md  memory_update.md  system.md  tools.jsonc  user.md
prompts/: system.md  tools.json
scripts/: benchmark_stt.py  bootstrap_macos.sh  run_voice_default.sh  start_janka_stt_server.sh  start_remote_stt_server.sh  start_wheatley.sh  start_wheatly.sh
src/wheatley/: __init__.py  cli.py  config.py  doctor.py  jsonc.py  language.py  memory.py  pipeline.py  prompting.py  text.py
src/wheatly/: __init__.py  cli.py  config.py  doctor.py  language.py  memory.py  pipeline.py  prompting.py  runtime_stats.py
tests/: test_audio_chimes.py  test_audio_interrupt.py  test_audio_log_paths.py  test_audio_playback.py  test_cli_commands.py  test_config.py  test_llm_backends.py  test_memory.py  test_microphone.py  test_pipeline.py  test_streaming_tts.py  test_stt_remote.py  test_tool_parser.py  test_tools.py  test_tts_backends.py
(+46 files in other folders)
