[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheatly"
version = "0.1.0"
description = "Offline-first voice agent pipeline for a small Wheatley-style robot."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Wheatly project" }]
dependencies = []

[project.optional-dependencies]
audio = [
  "numpy>=1.24",
  "sounddevice>=0.4.6"
]
stt = [
  "faster-whisper>=1.0.0"
]
stt-convert = [
  "faster-whisper>=1.0.0",
  "transformers>=4.46,<5",
  "torch>=2.2",
  "sentencepiece>=0.2"
]
tts = [
  "edge-tts>=7.0.0"
]
dev = [
  "pytest>=8.0"
]
all = [
  "numpy>=1.24",
  "sounddevice>=0.4.6",
  "faster-whisper>=1.0.0",
  "transformers>=4.46,<5",
  "torch>=2.2",
  "sentencepiece>=0.2",
  "edge-tts>=7.0.0"
]

[project.scripts]
wheatly = "wheatly.cli:main"
wheatly-stt-server = "wheatly.stt.server:main"

[tool.setuptools.packages.find]
where = ["src"]
